exports[`test with_munging.js 1`] = `
"/**
 * @flow
 */

class Foo {
  _method(): string {
    return 'this is private';
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // error
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 */
// error
class Foo {
  _method(): string {
    return "this is private";
  }
}
class Bar extends Foo {
  test() {
    (this._method(): string);
  }
}
"
`;

exports[`test without_munging.js 1`] = `
"/**
 * @flow
 * @preventMunge
 */

class Foo {
  _method(): string {
    return 'this is not private';
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // ok
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 * @preventMunge
 */
// ok
class Foo {
  _method(): string {
    return "this is not private";
  }
}
class Bar extends Foo {
  test() {
    (this._method(): string);
  }
}
"
`;
